--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.436.0",
     "next": "14.2.6",
+    "openai": "^4.56.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
