--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@xmtp/content-type-reaction": "^1.1.9",
+    "@xmtp/content-type-remote-attachment": "^1.1.9",
+    "@xmtp/content-type-reply": "^1.1.11",
+    "@xmtp/react-sdk": "^8.0.1",
+    "@xmtp/xmtp-js": "^12.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.436.0",
     "next": "14.2.6",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
